# opengl-starter

./: .gitignore  CMakeLists.txt  game.cpp  game.hpp  main.cpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  sprite_renderer.cpp  sprite_renderer.hpp  texture2d.cpp  texture2d.hpp
cmake/: FindGLEW.cmake
